--- a/index.html
+++ b/index.html
@@ -4,29 +4,36 @@
   <meta charset="UTF-8">
   <title>My To-Do List</title>
   <link href="css/todo.css" rel="stylesheet">
-  <link href="css/jquery-ui.min.css" rel="stylesheet">
-  <script src="js/jquery.min.js"></script>
+  <!--TODO change the jquery-ui to jquery-ui.min-->
+  <link href="css/jquery-ui.css" rel="stylesheet">
+  <script src="js/jquery-3.1.1.min.js"></script>
   <script src="js/jquery-ui.min.js"></script>
-
+  <script src="js/todo.js"></script>
 </head>
+
 <body>
 <div class="container">
   <div id="to-do">
     <h1>My To-do List</h1>
     <!-- add button here -->
+    <button id="add-todo">Add to-do item</button>
+
 
     <h2>To Be Done</h2>
     <ul id="todo-list">
 
     </ul>
   </div>
+
   <div id="completed">
     <h2>Completed Tasks</h2>
     <ul id="completed-list">
 
     </ul>
   </div>
+
   <!-- add dialog box here -->
+
 
 </div>
 </body>
