--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     <ul id="completed-list" class="sortable"></ul>
   </div>
 
-  <div id="new-todo" title="Add tod-do item">
+  <div id="new-todo" title="Add tod-do item" hidden="hidden">
     <form>
       <p>
-        <label for="task">Task Name:</label><br>
-        <input type="text" name="task" size="32" id="task"><br>
+        <label for="task-title">Task Name:</label><br>
+        <input type="text" name="task" size="32" id="task-title"><br>
         <!--TODO add functionality to accept the description-->
         <label for="task-description">Description:</label><br>
         <textarea name="task" id="task-description" cols="30" rows="6"></textarea><br>
