--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <title>My To-Do List</title>
   <link href="css/todo.css" rel="stylesheet">
-  <!--TODO when everything is done, change the jquery-ui to jquery-ui.min-->
-  <link href="css/jquery-ui.css" rel="stylesheet">
+  <link href="css/jquery-ui.min.css" rel="stylesheet">
   <script src="js/jquery-3.1.1.min.js"></script>
   <script src="js/jquery-ui.min.js"></script>
   <script src="js/todo.js"></script>
@@ -13,12 +12,11 @@
 
 <body>
 <div class="container">
-  <div>
-    <h1>My To-do List</h1>
+  <div id="page-title">
+    <h1>Hector's AWESOME To-do List<span><button id="add-todo">Add to-do item</button></span></h1>
   </div>
 
   <div id="to-do">
-    <button id="add-todo">Add to-do item</button>
     <h2>To Be Done</h2>
     <ul id="todo-list" class="sortable"></ul>
   </div>
